# ch32v00x-project

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  riscv-none-embed.cmake
debug/: debug.c  debug.h
drivers/device/: ch32v00x.h
drivers/device/ld/: app.ld  boot.ld
projects/cli/: ch32v00x_it.c  cli.c  cli.h  cli_cmd_handle.c  cli_cmd_handle.h  cli_cmds.c  main.c  uart.c
projects/flash/: main.c
projects/gpio/: main.c  system_ch32v00x.h
projects/iap/: ch32v00x_it.c  main.c
projects/rcc/: ch32v00x_it.c  main.c  system_ch32v00x.c
projects/uart/: ch32v00x_it.c  main.c
